Add layout chooser view

--- a/src/components/Builder/Builder.css
+++ b/src/components/Builder/Builder.css
@@ -1,3 +1,34 @@
 .Builder {
     grid-column: 2 / 3;
 }
+.Builder button {
+    transition: .3s all;
+    display: inline-block;
+    margin-right: 5px;
+    border-radius: 0;
+    border: 0;
+    background: #000;
+    color: #fff;
+    text-transform: uppercase;
+    line-height: 40px;
+    padding: 0 30px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    cursor: pointer;
+} 
+
+.Builder button:disabled {
+    background: #ccc;
+    color: #848484;
+    cursor: auto;
+}
+
+.Builder button:hover {
+    background: #686868;
+    color: #fff;
+}
+
+.Builder button:disabled:hover {
+    background: #ccc;
+    color: #848484;
+}
